asm_examples/test/errors/np/genericError.asm
//
// used to test generic errors
// 
asm genericError

import ../../../STDL/StandardLibrary

signature:

	dynamic controlled foo: Integer

definitions:
	main rule r_Main =		fooeee := 1
